kyverno/verify-image-signature.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-image-signature
spec:
  validationFailureAction: Enforce # not Audit — this actually blocks, not just logs
  background: false
  rules:
    - name: verify-cosign-keyless-signature
      match:
        any:
          - resources:
              kinds: ["Pod"]
              namespaces: ["devboard"]
      verifyImages:
        - imageReferences:
            - "docker.io/*/devboard-backend*"
            - "docker.io/*/devboard-frontend*"
          attestors:
            - count: 1
              entries:
                - keyless:
                    subject: "https://github.com/saadhussain07/devboard/.github/workflows/docker-push.yml@refs/heads/main"
                    issuer: "https://token.actions.githubusercontent.com"
                    rekor:
                      url: https://rekor.sigstore.dev
